# python-project-52

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
task_manager/: apps.py  filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  views_labels.py  views_statuses.py  views_tasks.py  views_users.py
task_manager/core/: forms.py  models.py  tests.py  urls.py  views.py  views_labels.py  views_statuses.py  views_tasks.py  views_users.py
task_manager/core/migrations/: 0001_initial.py  0002_alter_status_name_task.py  0003_alter_task_description_alter_task_executor.py  0005_remove_label_tasks_task_labels.py  (+4 more)
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_executor_and_more.py  0002_alter_task_status_delete_status.py  0003_user_alter_task_author_alter_task_executor.py
task_manager/static/: starter-template.css
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/task_manager/: models.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: application.html  create_user.html  delete_default.html  delete_user.html  form_default.html  index.html  labels_list.html  list_labels.html  list_statuses.html  list_tasks.html  list_users.html  login.html  starter_template.html  statuses_list.html  task.html  tasks_list.html  users.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+5 files in other folders)
