[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager website on django with authentication and db"
authors = ["odhako"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
