[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager website on django with authentication and db"
authors = ["odhako"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
django-extensions = "^3.2.1"
python-dotenv = "^0.21.1"
dj-database-url = "^1.2.0"
ipython = "^8.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
